--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-full-screen": "^0.2.4",
+    "react-loadable": "^5.5.0",
     "react-p5-wrapper": "^2.0.0",
     "react-scripts": "3.1.1",
     "react-spring": "^8.0.27"
